# rust-plasma

./: .gitignore  ANIMATION-BUGFIXES.md  ANIMATION-ERROR-HANDLING-IMPLEMENTATION.md  ANIMATION-INTEGRATION-COMPLETE.md  ANIMATION-INTEGRATION-TESTS.md  BACKEND-ANIMATION-DATA-FIX.md  Cargo.toml  DATA-LOADING-PROGRESS-IMPLEMENTATION.md  FRAME-EXPORT-IMPLEMENTATION.md  INTEGRATION-TEST-SUMMARY.md  PAUSE-RESUME-IMPLEMENTATION.md  PROMPTS.md  PROMPTS_2.md  README.md  SPEED-CONTROL-IMPLEMENTATION.md  TASK-10-METADATA-DISPLAY-IMPLEMENTATION.md  TASK-15-SUMMARY.md  TASK-16-INTEGRATION-TESTS-COMPLETE.md  TASK-7-COMPLETED.md  TASK-8-VERIFICATION.md  TAURI-API-FIX.md  TEST-TORCH-POSITION-README.md  TIMELINE-SCRUBBING-IMPLEMENTATION.md  TODO.md  academic_project_description.md  consolidated-requirements.md  phase_change_modeling.md  requirements_version_1.md  requirements_version_2.md  requirementss.md  run-torch-position-tests.sh  suggestions.md  test-animation-error-handling.html  test-animation-frame-updates.html  test-animation-integration.html  test-animation-playback-integration.html  test-cancellation.html  test-data-loading-progress.html  test-error-handling.html  test-frame-export.html  (+17 more)
benches/: performance_test.rs  solver_benchmark.rs
docs/: build_guide.md  (+12 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: formula.rs  lib.rs  main.rs  parameters.rs  project.rs  simulation.rs  state.rs
src-tauri/ui/: index.html  main.js  style.css  tauri-ipc-bridge.js  test-integration.html  test-process-results.html  test-tauri-api.html  test.html
src-tauri/ui/backup/: parameters-original.html
src-tauri/ui/backup/css-original/: main.css
src-tauri/ui/backup/css-original/components/: buttons.css
src-tauri/ui/backup/css-original/design-system/: layout.css  typography.css
src-tauri/ui/backup/css-original/features/: formulas.css  visualization.css
src-tauri/ui/backup/js-original/features/: visualization.js
src-tauri/ui/css/: main.css
src-tauri/ui/css/components/: forms.css
src-tauri/ui/css/design-system/: layout.css  variables.css
src-tauri/ui/css/features/: parameters.css
src-tauri/ui/js/: main.js
src-tauri/ui/js/components/: animation.js  animationUI.js  errorDisplay.js  metadataDisplay.js  parameters.js  simulation.js  visualization.js
src-tauri/ui/js/core/: api.js  app.js  data-cache.js  errorHandler.js  eventBus.js  keyboardHandler.js  loadingManager.js  state.js  utils.js
src-tauri/ui/js/features/: debug-panel.js  formula-editor.js  geometry.js  parameters.js  playback.js  project-management.js  visualization.js
src-tauri/ui/js/models/: parameters.js
(+56 files in other folders)
