[package]
name = "plasma_simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "plasma_simulation"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rhai = { version = "1.15", features = ["sync", "serde"] }
rayon = "1.7"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

# [[bench]]
# name = "solver_benchmark"
# harness = false
