[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "plasma_simulation"
version = "0.1.0"
edition = "2021"
description = "High-performance plasma furnace simulation library"
authors = ["Plasma Simulation Team"]
license = "MIT"
repository = "https://github.com/plasma-simulation/plasma-furnace-simulator"

[lib]
name = "plasma_simulation"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core numerical computing
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
rayon = "1.7"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Formula engine
rhai = { version = "1.15", features = ["sync", "serde"] }

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "solver_benchmark"
harness = false
path = "benches/solver_benchmark.rs"
