[package]
name = "plasma-furnace-app"
version = "0.1.0"
description = "Plasma Furnace Simulator Desktop Application"
authors = ["Plasma Simulation Team"]
license = "MIT"
repository = "https://github.com/plasma-simulation/plasma-furnace-simulator"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "plasma_furnace_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Main simulation library
plasma_simulation = { path = ".." }

# Tauri framework
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Async runtime for Tauri commands
tokio = { version = "1.0", features = ["full"] }
